@@ -20,6 +20,7 @@ Fixed bug  254: False+ : UnusedImport with Javadoc @throws
 Fixed bug 1080: net.sourceforge.pmd.cpd.CPDTest test failing
 Fixed bug 1081: Regression: CPD skipping all files when using relative paths
 Fixed bug 1082: CPD performance issue on larger projects
+Fixed bug 1085: NullPointerException by at net.sourceforge.pmd.lang.java.rule.design.GodClassRule.visit(GodClassRule.java:313)
 Fixed bug 1086: Unsupported Element and Attribute in Ant Task Example
 Fixed bug 1087: PreserveStackTrace (still) ignores initCause()
 
